Fix 0 width columns on mobile

--- a/public/styles/home.styl
+++ b/public/styles/home.styl
@@ -12,6 +12,7 @@ body
   position relative
   overflow hidden
   white-space normal
+  width 100vw
 
   transition width 300ms cubic-bezier(0.075, 0.82, 0.165, 1)
 
